Menu is fixed only on small screens

--- a/static/less/app.less
+++ b/static/less/app.less
@@ -49,6 +49,12 @@ a:hover {
   font-style: italic;
 }
 
+.z2 {
+  z-index: 200;
+}
+.z3 {
+  z-index: 300;
+}
 .hidden {
   display: none;
 }
